On Fedora 18 there is no Xwrapper.config

--- a/scripts/sugar-runner.in
+++ b/scripts/sugar-runner.in
@@ -47,9 +47,12 @@ def _write_xkb_config():
 
 
 def _allow_to_run_x():
-    with open("/etc/X11/Xwrapper.config") as f:
-        if "allowed_users=anybody" in f.read():
-            return
+    try:
+        with open("/etc/X11/Xwrapper.config") as f:
+            if "allowed_users=anybody" in f.read():
+                return
+    except IOError:
+	return
 
     print "We need to allow everybody to run the X server"
     tweak_wrapper = os.path.join(helpers_dir, "tweak-xwrapper")
