--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT([sugar-runner], [0.2], [dwnarvaez@gmail.com])
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE([foreign dist-xz no-dist-gzip])
 AC_CONFIG_MACRO_DIR([m4])
 
 AC_PROG_CC
