Use the test target instead of check

--- a/Makefile-scripts.am
+++ b/Makefile-scripts.am
@@ -9,7 +9,7 @@ dist_helpers_SCRIPTS = $(SCRIPTSDIR)/xinitrc \
                        $(SCRIPTSDIR)/tweak-xwrapper \
                        $(SCRIPTSDIR)/xephyr-window
 
-check:
+test:
 	pep8 $(dist_helpers_SCRIPTS) $(bin_in_files)
 
 CLEANFILES += $(bin_SCRIPTS)
