--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ SCRIPTSDIR = $(top_srcdir)/scripts
 LIBSRCDIR = $(top_srcdir)/lib
 DATASRCDIR = $(top_srcdir)/data
 
-EXTRA_DIST =
+EXTRA_DIST = README.md
 CLEANFILES =
 
 include $(top_srcdir)/Makefile-data.am
