--- a/Makefile-data.am
+++ b/Makefile-data.am
@@ -1,4 +1,7 @@
 applicationsdir = $(datadir)/applications
 applications_DATA = $(DATASRCDIR)/sugar-runner.desktop
 
-EXTRA_DIST += $(applications_DATA)
+icondir = $(datadir)/icons/hicolor/scalable/apps
+icon_DATA = $(DATASRCDIR)/sugar-xo.svg
+
+EXTRA_DIST += $(applications_DATA) $(icon_DATA)
