Disable static library

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AC_CONFIG_MACRO_DIR([m4])
 
 AC_PROG_CC
 AC_PROG_LIBTOOL
+AC_DISABLE_STATIC
 
 PKG_CHECK_MODULES(SUGAR_RUNNER, x11 xrandr glib-2.0)
 
