--- a/scripts/sugar-runner.in
+++ b/scripts/sugar-runner.in
@@ -25,6 +25,8 @@ import time
 import signal
 import sys
 
+import gi
+gi.require_version('SugarRunner', '1.0')
 from gi.repository import SugarRunner
 
 helpers_dir = "@helpersdir@"
@@ -43,6 +45,7 @@ def _setpgrp_preexec():
 
 
 def _get_screen_dpi():
+    gi.require_version('Gtk', '3.0')
     from gi.repository import Gtk
 
     settings = Gtk.Settings.get_default()
